--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.80"
 [dependencies]
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
+crossterm = "0.28.1"
 dirs = "6.0.0"
 paste = "1.0.15"
 thiserror = "1.0.38"                             # error handling
